<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:id="@+id/clicktheimage"
    tools:context="clicktheimage">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:background="@drawable/bg1_720"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/i1"
        />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:layout_alignWithParentIfMissing="true"
        android:src="@drawable/cti"
        android:baselineAlignBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/i3"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        style="@android:style/ButtonBar"
        android:alpha="0.4"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/NG"
        android:id="@+id/button6"
        android:onClick="onClick"
        android:clickable="true"
        style="@android:style/Widget.Holo.Light.ActionButton.CloseMode"
        android:longClickable="false"
        android:textColor="#ff260013"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text=""
        android:id="@+id/a11111"
        android:layout_below="@+id/button6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="0"
        />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:alpha="0.4"
        android:layout_alignTop="@+id/score"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/score" />

    <Button
        style="@android:style/Widget.Holo.Light.ActionButton.CloseMode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ys"
        android:id="@+id/score"
        android:clickable="true"
        android:longClickable="false"
        android:textColor="#ff260013"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/a11111"
        android:onClick="score"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text=""
        android:id="@+id/a222"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="0"
        />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:alpha="0.4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/a222"
        />

    <Button
        style="@android:style/Widget.Holo.Light.ActionButton.CloseMode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btg"
        android:id="@+id/backtogame"
        android:onClick="BackToGame"
        android:clickable="true"
        android:longClickable="false"
        android:textColor="#ff260013"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_below="@+id/a222"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/button7"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text=""
        android:id="@+id/a33333"
        android:layout_below="@+id/backtogame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="0" />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:alpha="0.4"
        android:layout_below="@+id/a33333"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="@android:style/Widget.Holo.Light.ActionButton.CloseMode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:onClick="onsettings"
        android:clickable="true"
        android:longClickable="false"
        android:textColor="#ff260013"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/a33333"
        android:layout_alignBottom="@+id/button8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sound"
        android:layout_alignTop="@+id/button9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/soundon"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/i2"
         />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/FLS">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text=""
            android:id="@+id/button"
            android:background="@drawable/bg"
            android:onClick="close" />

        <RelativeLayout
            android:layout_width="206dp"
            android:layout_height="263dp"
            android:layout_gravity="center"
            android:background="@drawable/menu1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:text=""
                android:id="@+id/button4"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:alpha="0" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ybs"
                android:id="@+id/BS"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/exitscore"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/bst"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:layout_below="@+id/BS"
                android:layout_alignLeft="@+id/BS"
                android:layout_alignStart="@+id/BS"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="25sp" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/exitscore"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/BS"
                android:layout_alignEnd="@+id/BS"
                android:background="@android:drawable/ic_menu_close_clear_cancel"
                android:onClick="close" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/YOUR_SCORE"
                android:id="@+id/PBS"
                android:layout_marginTop="34dp"
                android:gravity="center"
                android:layout_below="@+id/bst"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/pbst"
                android:layout_below="@+id/PBS"
                android:layout_marginTop="25dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textSize="25sp" />

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>
